--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "jquery": "^3.5.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.3.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
